--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,10 +39,11 @@ android {
         applicationId "com.arksoft.ramp"
         // You can update the following values to match your application needs. 
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+		multiDexEnabled true
     }
 
     buildTypes {
@@ -52,6 +53,9 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+	dependencies{
+		compile 'com.android.support:multidex:1.0.3'
+	}
 }
 
 flutter {
