--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,8 +29,8 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>AccessMusicFiles</string>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>This app requires access to play music</string>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
