--- a/lib/screens/codemagic.yaml
+++ b/lib/screens/codemagic.yaml
@@ -13,7 +13,8 @@ workflows:
         find . -name "Podfile" -execdir pod install \;
     - name: Flutter build ipa
       script: | 
-        flutter build ipa --release \
+        # flutter build ipa --release \
+        flutter build ios --debug --no-codesign
           --build-name=1.0.0 \
           --export-options-plist=/Users/builder/export_options.plist
     artifacts:
